made changes to home page

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
               
                 <div class="dropdown-container">
                     <div class="dropdown">
-                        <button class = dropdown-button onclick = "MyFunction()"> 
+                        <button class = dropdown-button onclick = "DropdownFunction()"> 
                             <img src="src/Plant_icon(2).png" alt = "plant_button">
                         </button>
                         <div class= "dropdown-content"> 
-                            <img src = "src/Fungi.png" alt = "Image 1 " class = "dropdown-image" data-target="target-spot-1" data-original-parent="dropdown-content" data-original-index="0" data-moved="false"> 
-                            <img src = "src/Bryophta.png" alt = "Image 2 " class = "dropdown-image" data-target="target-spot-2" data-original-parent="dropdown-content" data-original-index="2" data-moved="false">
-                            <img src = "src/Algae.png" alt = "Image 3 " class = "dropdown-image" data-target="target-spot-3" data-original-parent="dropdown-content" data-original-index="3" data-moved="false">
-                            <img src = "src/Pteridophyta.png" alt = "Image 4 " class = "dropdown-image" data-target="target-spot-4" data-original-parent="dropdown-content" data-original-index="4" data-moved="false">
-                            <img src = "src/Gymnosperms.png" alt = "Image 5 " class = "dropdown-image" data-target="target-spot-5" data-original-parent="dropdown-content" data-original-index="5" data-moved="false">   
-                            <img src = "src/Angiosperm.png" alt = "Image 6 " class = "dropdown-image" data-target="target-spot-6" data-original-parent="dropdown-content" data-original-index="6" data-moved="false">  
+                            <img src = "src/Fungi.png"  id = "Image 1 " class = "dropdown-image" data-target="target-spot-1" data-original-parent="dropdown-content" onclick= "ChangePos(1)" > 
+                            <img src = "src/Bryophta.png" id  = "Image 2 " class = "dropdown-image" data-target="target-spot-2" data-original-parent="dropdown-content" onclick="ChangePos(2)" >
+                            <img src = "src/Algae.png" id = "Image 3 " class = "dropdown-image" data-target="target-spot-3" data-original-parent="dropdown-content" onclick="ChangePos(3)">
+                            <img src = "src/Pteridophyta.png" id = "Image 4 " class = "dropdown-image" data-target="target-spot-4" data-original-parent="dropdown-content" onclick="ChangePos(4)">
+                            <img src = "src/Gymnosperms.png" id = "Image 5 " class = "dropdown-image" data-target="target-spot-5" data-original-parent="dropdown-content" onclick="ChangePos(5)">   
+                            <img src = "src/Angiosperm.png" id = "Image 6 " class = "dropdown-image" data-target="target-spot-6" data-original-parent="dropdown-content" onclick="ChangePos(6)">  
                         </div>
                     </div>
                 </div>
